helmsman-deployments/aws/eci-dev/us-east-1/dev/monitoring/ingress-monitoring-stack.yaml
---
# Prometheus UI Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  labels:
    app: prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.dev-eks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-prometheus
                port:
                  number: 9090

---
# Alertmanager UI Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.dev-eks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-alertmanager
                port:
                  number: 9093

---
# Grafana UI Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  labels:
    app: grafana
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.dev-eks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
